[package]
name = "rmk-notebook-editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-file = "0.2"
js-sys = "0.3"

yew = "0.19"
wasm-bindgen = "0.2"


[dependencies.web-sys]
version = "0.3"
features = [
    'HtmlCanvasElement',
    'WebGlBuffer',
    'WebGlProgram',
    'WebGlRenderingContext',
    'WebGlShader',
    'WebGlUniformLocation',
]

[dependencies.pathfinder_webgl]
git = "https://github.com/servo/pathfinder"

[dependencies.pathfinder_geometry]
git = "https://github.com/servo/pathfinder"

[dependencies.pathfinder_renderer]
git = "https://github.com/servo/pathfinder"

[dependencies.pathfinder_color]
git = "https://github.com/servo/pathfinder"

[dependencies.pathfinder_resources]
git = "https://github.com/servo/pathfinder"

[dependencies.pathfinder_canvas]
git = "https://github.com/servo/pathfinder"
