[package]
name = "rmk-notebook-editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-file = "0.2"
js-sys = "0.3"

yew = "0.19"
wasm-bindgen = "0.2"
piet-common = { version = "0.5", features = ["web"] }
console_error_panic_hook = "0.1"
piet = "0.5"


[dependencies.web-sys]
version = "0.3"
features = [
    'HtmlCanvasElement',
    'WebGlBuffer',
    'WebGlProgram',
    'WebGlRenderingContext',
    'WebGlShader',
    'WebGlUniformLocation',
]
